# A-Joinless-Approach-for-Mining-Spatial-Colocation-Patterns

./: .gitignore  CMakeLists.txt  README.md  joinless_algorithm.py  mining_report.txt  optimization_plan.md  plan.md  walkthrough.md
data/: .gitignore  sample_data.csv  sample_data.csv.dvc
docs/: README_BUILD_DATASET.md  src_C++_guide.md
notebooks/: test.ipynb
src/c++/: config.txt
src/c++/include/: config.h  data_loader.h  miner.h  neighborhood_mgr.h  spatial_index.h  types.h  utils.h
src/c++/src/: config.cpp  data_loader.cpp  main  main.cpp  miner.cpp  neighborhood_mgr.cpp  spatial_index  spatial_index.cpp  utils.cpp
src/python/: main.py
src/python/joinless/: __init__.py  data_loader.py  mining.py  structures.py
